@@ -1743,6 +1743,14 @@ Details    : Checks validity of on-disk block bitmap. Also it does better
 	     checking of number of applied preallocations. When corruption is
 	     found, it turns filesystem readonly to prevent further corruptions.
 
+Severity   : normal
+Bugzilla   : 17197
+Description: (rw.c:1323:ll_read_ahead_pages()) ASSERTION(page_idx > ria->ria_stoff) failed
+Details    : Once the unmatched stride IO mode is detected, shrink the stride-ahead
+	     window to 0. If it does hit cache miss, and read-pattern is still 
+	     stride-io mode, does not reset the stride window, but also does not 
+	     increase the stride window length in this case.
+
 --------------------------------------------------------------------------------
 
 2007-08-10         Cluster File Systems, Inc. <info@clusterfs.com>
